src/test/resources/invalid/typecheck/Super_WrongArg.vas
class Parent is
    this(b: Boolean) is
    end
end

class Derived extends Parent is
    this() is
        super(42)
    end
end
